# uniqredit

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  configure.ac  libuniqreditconsensus.pc.in
.tx/: config
contrib/: README.md  qt_translations.py  tidy_datadir.sh  uniqredit-qt.pro  uniqreditd.bash-completion
depends/: Makefile  README.md  config.site.in  description.md
doc/: Doxyfile  README.md  README_osx.md  REST-interface.md  (+24 more)
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.cpp  addrman.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  auxpow.cpp  base58.cpp  base58.h  bidtracker.cpp  bidtracker.h  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_memusage.h  (+85 more)
src/bench/: .gitignore  Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_uniqredit.cpp  crypto_hash.cpp  rollingbloom.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/config/: bitcredit-config.h.in
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: aes.cpp  aes.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/crypto/ctaes/: README.md
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  assetspage.cpp  assetspage.h  bantablemodel.cpp  bantablemodel.h  bidpage.cpp  bidpage.h  blockexplorerpage.cpp  blockexplorerpage.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  exchangebrowserpage.cpp  exchangebrowserpage.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.cpp  notificator.h  openuridialog.cpp  (+82 more)
src/qt/forms/: addressbookpage.ui  assetspage.ui  bidpage.ui  blockexplorerpage.ui  coincontroldialog.ui  debugwindow.ui  exchangebrowserpage.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  otherpage.ui  overviewpage.ui  p2plpage.ui  p2ppage.ui  receivecoinsdialog.ui  receiverequestdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  utilitiespage.ui
src/qt/locale/: uniqredit_af.ts  uniqredit_af_ZA.ts  uniqredit_ar.ts  uniqredit_be_BY.ts  uniqredit_bg.ts  uniqredit_bg_BG.ts  uniqredit_bs.ts  uniqredit_ca.ts  uniqredit_ca@valencia.ts  uniqredit_ca_ES.ts  uniqredit_cs.ts  uniqredit_cs_CZ.ts  uniqredit_cy.ts  uniqredit_da.ts  uniqredit_de.ts  uniqredit_el.ts  uniqredit_el_GR.ts  uniqredit_en.ts  uniqredit_en_GB.ts  uniqredit_eo.ts  uniqredit_es.ts  uniqredit_es_419.ts  uniqredit_es_AR.ts  uniqredit_es_CL.ts  uniqredit_es_CO.ts  uniqredit_es_DO.ts  uniqredit_es_ES.ts  uniqredit_es_MX.ts  uniqredit_es_UY.ts  uniqredit_es_VE.ts  uniqredit_et.ts  uniqredit_eu_ES.ts  uniqredit_fa.ts  uniqredit_fa_IR.ts  uniqredit_fi.ts  uniqredit_fil.ts  uniqredit_fr.ts  uniqredit_fr_CA.ts  uniqredit_fr_FR.ts  uniqredit_gl.ts  (+48 more)
src/qt/res/: uniqredit-qt-res.rc
src/qt/res/css/: dyno.css  dyno2.css
src/qt/test/: paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.cpp  client.h  loans.cpp  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h  uniqreditconsensus.cpp  uniqreditconsensus.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_uniqredit_NativeSecp256k1.c  org_uniqredit_NativeSecp256k1.h
src/secp256k1/src/java/org/bitcoin/: NativeSecp256k1.java
src/support/: cleanse.cpp  cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum10.h  (+18 more)
src/test/data/: README.md  uniqredit-util-test.json
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h
src/wallet/: crypter.cpp  crypter.h  db.cpp  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: accounting_tests.cpp  crypto_tests.cpp  rpc_wallet_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+214 files in other folders)
